1) An an alignment as one more example is added; 2) 'Choose a file' instead of 'Choose a file with protein sequences'; 3) Corrections and additions in Help; 4) Changed prefix of downloadable files; 5) Changed postfix of json file genreted by Domains pipeline

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -603,13 +603,14 @@ input:checked + .slider:before {
 
 /*Examples*/
 
-.features-example {
+.pipelines-examples {
     display: flex;
     justify-content: flex-start;
 }
 
-.pipelines-example1, .pipelines-example2, .pipelines-example3 {
+.pipelines-example1, .pipelines-example2, .pipelines-example3, .pipelines-example4 {
     cursor: pointer;
+    margin-right: 4px;
 }
 
 /*Examples end*/
